MAKE: added missing libs

--- a/Makefile.lib.config
+++ b/Makefile.lib.config
@@ -16,7 +16,14 @@ LIB_SRCC = \
 LIB_EXT_LIB_NAMES = \
 	password_hasher \
 	session_manager \
+	user_reg \
 	user_manager \
-	utils \
+	user_reg_email \
+	user_reg_protocol \
+	templtext \
+	anyvalue_db \
+	anyvalue \
+	serializer \
 	generic_protocol \
 	generic_request \
+	utils \
