--- a/Makefile.app.config
+++ b/Makefile.app.config
@@ -7,14 +7,23 @@ VER = 0
 
 APP_PROJECT := example
 
-APP_THIRDPARTY_LIBS = -lm -lstdc++
+APP_BOOST_LIB_NAMES := system date_time regex
+
+APP_THIRDPARTY_LIBS = -lm -lstdc++ -lcurl
 
 APP_SRCC = example.cpp
 
 APP_EXT_LIB_NAMES = \
 	password_hasher \
 	session_manager \
+	user_reg \
 	user_manager \
-	utils \
+	user_reg_email \
+	user_reg_protocol \
+	templtext \
+	anyvalue_db \
+	anyvalue \
+	serializer \
 	generic_protocol \
 	generic_request \
+	utils \
